# gpu-screen-recorder-adwaita

./: README.md  com.dec05eba.gpu_screen_recorder.desktop  com.dec05eba.gpu_screen_recorder.metainfo.xml  gobject-linter.toml  meson.build  meson_options.txt
.github/workflows/: gobject-linter.yml
po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  it.po  meson.build  pt.po  vi.po
src/: global_shortcuts.c  global_shortcuts.h  gsr-config-page.c  gsr-config-page.h  gsr-config.c  gsr-config.h  gsr-hotkeys.c  gsr-hotkeys.h  gsr-info.c  gsr-info.h  gsr-record-page.c  gsr-record-page.h  gsr-replay-page.c  gsr-replay-page.h  gsr-shortcut-accel-dialog.c  gsr-shortcut-accel-dialog.h  gsr-stream-page.c  gsr-stream-page.h  gsr-window.c  gsr-window.h  gsr-x11-hotkeys.c  gsr-x11-hotkeys.h  gsr-x11-window-picker.c  gsr-x11-window-picker.h  main.c
